// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Expenses Summary - Multiple Expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     expenses 
    totalling 
    $95.68
  </h1>
</div>
`;

exports[`Render Expenses Summary - Single Expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense 
    totalling 
    $95.68
  </h1>
</div>
`;
